commit all